<resources>
    <string name="app_name">Folkloripedia Bolivia</string>
    <string name="error">Error</string>
    <string name="longExample">Este es un contenido de ejemplo para llenar un campo y realizar la prueba correspondiente</string>
    <string name="shortExample">Ejemplo</string>
    <string name="numberExample">100</string>

    <!--    languages-->
    <string-array name="languages">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string name="language_icon">Idioma</string>
    <string name="spanish">Español</string>
    <string name="english">English</string>


    <!--    months-->
    <string-array name="months_array">
        <item>Seleccione un mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <!--    Home-->
    <string name="home">Inicio</string>
    <string name="games">Juegos</string>
    <string name="about">Acerca de</string>
    <string name="events">Eventos</string>
    <string name="suggestions">Sugerencias</string>

    <!--    Home/Articles -->
    <string name="dance">Danzas</string>
    <string name="music">Música</string>
    <string name="art">Arte</string>
    <string name="myths">Mitos</string>
    <string name="description">Descripción:</string>
    <string name="region">Región:</string>
    <string name="instruments">Instrumentos:</string>
    <string name="vestment">Vestimenta:</string>
    <string name="year">Año:</string>
    <string name="close">Cerrar</string>
    <string name="retry">Reintentar</string>
    <string name="author">Autor:</string>
    <string name="material">Material:</string>
    <string name="origin">Origen:</string>
    <string name="category">Categoría:</string>
    <string name="articles">Articulos</string>

    <!--    Games -->
    <string name="curiosities_roulette">Ruleta de Curiosidades</string>
    <string name="Quiz">Cuestionario de contenido</string>

    <!--    Games / Quiz -->
    <string name="question">Pregunta</string>
    <string name="result">Tu resultado</string>
    <string name="result_low">Puedes mejorar!!</string>
    <string name="message_low">Date una vuelta por la aplicación e intenta nuevamente, lo lograrás</string>
    <string name="result_good">Lo has hecho bien!!</string>
    <string name="message_good">Has asimilado un buen porcentaje del contenido, sigue así</string>
    <string name="result_excellent">Estas dominando!!</string>
    <string name="message_excellent">El contenido ya se queda corto para ti, no te preocupes, pronto pondremos más material a tu disposición</string>
    <string name="roulette_message">Gira la ruleta</string>

    <!--    Suggestions -->
    <string name="suggestion_message">Como desarrollador novato, he creado esta aplicación con dedicación y entusiasmo. Sin embargo, en este proceso intenso, es posible que se me hayan escapado algunos detalles. Por eso, tu ayuda es fundamental. \n\nEn esta sección, me encantaría conocer tu opinión. Ideas, errores o experiencias, todos tus comentarios son bienvenidos. \n\nTu contribución mejorará esta aplicación dedicada a la población boliviana y potencialmente a usuarios de todo el mundo. \n\nGracias por descargar y disfrutar de este trabajo. Tu feedback es crucial para su continuo desarrollo y mejora.</string>
    <string name="val_suggestion_form">Llene todos los campos para continuar</string>
    <string name="suggestion_saved">Su sugerencia fue registrada correctamente, gracias por su opinión</string>
    <string name="val_suggestion_time">Solo puedes enviar una sugerencia cada 24 horas</string>
    <string name="suggestion_name">Nombre</string>
    <string name="suggestion_email">Correo electrónico</string>
    <string name="suggestion">Sugerencia</string>
    <string name="suggestion_send">Enviar sugerencia</string>
    <string name="val_suggestion_email">Introduzca un correo válido</string>

    <!--    Events-->
    <string name="day">Día</string>
    <string name="events_message">Seleccione un mes para ver sus eventos</string>

    <!--    Populate-->
    <string name="inserts">Insertar</string>
    <string name="insert_events">Registrar Eventos</string>
    <string name="insert_dances">Registrar Dazas</string>
    <string name="insert_myths">Registrar Mitos</string>
    <string name="insert_curiosities">Registrar curiosidades</string>
    <string name="insert_music">Registrar musica</string>
    <string name="insert_art">Registrar Arte</string>
    <string name="insert_quiz">Registrar Quiz</string>

</resources>