<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".ui.populate.PopulateFragment">

    <Button
        android:id="@+id/btnRegisterEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_events"/>

    <Button
        android:id="@+id/btnRegisterDances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_dances"/>

    <Button
        android:id="@+id/btnRegisterMyths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_myths"/>

    <Button
        android:id="@+id/btnRegisterCuriosities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_curiosities"/>

    <Button
        android:id="@+id/btnRegisterMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_music"/>

    <Button
        android:id="@+id/btnRegisterArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_art"/>

    <Button
        android:id="@+id/btnRegisterQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/insert_quiz"/>
</LinearLayout>