<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category_detail.MusicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/musicPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMusic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/red" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMusicCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-20dp"
            android:elevation="8dp"
            app:cardCornerRadius="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMusic">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvMusicName"
                    style="@style/ItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    tools:text="HOMLA" />

                <TableLayout
                    android:id="@+id/tlDanceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            style="@style/TableLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/origin" />

                        <TextView
                            android:id="@+id/tvMusicOrigin"
                            style="@style/TableValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/TableLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/tvMusicCategory"
                            style="@style/TableValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/TableLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/material" />

                        <TextView
                            android:id="@+id/tvMusicMaterial"
                            style="@style/TableValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />
                    </TableRow>
                </TableLayout>

                <TextView
                    style="@style/TableLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvDanceDescription"
                        style="@style/TableValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:scrollHorizontally="false"
                        tools:text="Description" />
                </ScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPlayMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:src="@drawable/ic_speaker"
            app:backgroundTint="@color/primaryStrong"
            app:fabSize="normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>