<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category_detail.ArtFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/artPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivArt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/red" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvArtCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            app:cardCornerRadius="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivArt"
            android:layout_marginTop="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvArtName"
                    style="@style/ItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    tools:text="HOMLA" />

                <TableLayout
                    android:id="@+id/tlArtInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            style="@style/TableLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/author" />

                        <TextView
                            android:id="@+id/tvArtAuthor"
                            style="@style/TableValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/TableLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/tvArtMaterial"
                            style="@style/TableValue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:scrollHorizontally="false" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <TextView
                        style="@style/TableLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description" />

                    <Button
                        android:id="@+id/btn_minus"
                        style="@style/SizeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="-"/>

                    <Button
                        android:id="@+id/btn_plus"
                        style="@style/SizeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"/>

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvArtDescription"
                        style="@style/TableValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:scrollHorizontally="false"
                        tools:text="Description" />
                </ScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>